Swagger improves